@@ -17,9 +17,7 @@
  */
 package de.tudarmstadt.ukp.inception.annotation.layer.span;
 
-import static de.tudarmstadt.ukp.inception.support.WebAnnoConst.SPAN_TYPE;
 import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.toList;
 import static org.apache.uima.cas.CAS.TYPE_NAME_ANNOTATION;
 
 import java.util.Collection;
@@ -39,6 +37,7 @@ import de.tudarmstadt.ukp.inception.annotation.layer.behaviors.LayerBehaviorRegi
 import de.tudarmstadt.ukp.inception.schema.api.feature.FeatureSupportRegistry;
 import de.tudarmstadt.ukp.inception.schema.api.layer.LayerSupport_ImplBase;
 import de.tudarmstadt.ukp.inception.schema.api.layer.LayerType;
+import de.tudarmstadt.ukp.inception.support.WebAnnoConst;
 
 /**
  * <p>
@@ -50,6 +49,9 @@ public class SpanLayerSupport
     extends LayerSupport_ImplBase<SpanAdapter, SpanLayerTraits>
     implements InitializingBean
 {
+    @SuppressWarnings("deprecation")
+    public static final String TYPE = WebAnnoConst.SPAN_TYPE;
+
     private final ApplicationEventPublisher eventPublisher;
     private final LayerBehaviorRegistry layerBehaviorsRegistry;
 
@@ -81,7 +83,7 @@ public class SpanLayerSupport
     @Override
     public void afterPropertiesSet() throws Exception
     {
-        types = asList(new LayerType(SPAN_TYPE, "Span", layerSupportId));
+        types = asList(new LayerType(TYPE, "Span", layerSupportId));
     }
 
     @Override
@@ -93,18 +95,16 @@ public class SpanLayerSupport
     @Override
     public boolean accepts(AnnotationLayer aLayer)
     {
-        return SPAN_TYPE.equals(aLayer.getType());
+        return TYPE.equals(aLayer.getType());
     }
 
     @Override
     public SpanAdapter createAdapter(AnnotationLayer aLayer,
             Supplier<Collection<AnnotationFeature>> aFeatures)
     {
-        SpanAdapter adapter = new SpanAdapter(getLayerSupportRegistry(), featureSupportRegistry,
-                eventPublisher, aLayer, aFeatures,
+        return new SpanAdapter(getLayerSupportRegistry(), featureSupportRegistry, eventPublisher,
+                aLayer, aFeatures,
                 layerBehaviorsRegistry.getLayerBehaviors(this, SpanLayerBehavior.class));
-
-        return adapter;
     }
 
     @Override
@@ -113,9 +113,10 @@ public class SpanLayerSupport
     {
         var td = aTsd.addType(aLayer.getName(), aLayer.getDescription(), TYPE_NAME_ANNOTATION);
 
-        List<AnnotationFeature> featureForLayer = aAllFeaturesInProject.stream()
+        var featureForLayer = aAllFeaturesInProject.stream()
                 .filter(feature -> aLayer.equals(feature.getLayer())) //
-                .collect(toList());
+                .toList();
+
         generateFeatures(aTsd, td, featureForLayer);
     }
 
@@ -131,7 +132,7 @@ public class SpanLayerSupport
     @Override
     public Panel createTraitsEditor(String aId, IModel<AnnotationLayer> aLayerModel)
     {
-        AnnotationLayer layer = aLayerModel.getObject();
+        var layer = aLayerModel.getObject();
 
         if (!accepts(layer)) {
             throw unsupportedLayerTypeException(layer);
