@@ -21,9 +21,9 @@ import static java.util.Arrays.asList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.unmodifiableSet;
 import static java.util.Comparator.comparingInt;
-import static java.util.stream.Collectors.toList;
 
 import java.io.Serializable;
+import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -34,6 +34,9 @@ import java.util.Optional;
 import java.util.Set;
 
 import org.apache.commons.lang3.Validate;
+import org.apache.uima.cas.text.AnnotationPredicates;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationDocument;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationLayer;
@@ -51,6 +54,8 @@ import de.tudarmstadt.ukp.inception.support.logging.LogMessage;
 public class Predictions
     implements Serializable
 {
+    private static final Logger LOG = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
+
     private static final long serialVersionUID = -1598768729246662885L;
 
     private final int generation;
@@ -68,7 +73,9 @@ public class Predictions
     // session, the pool of IDs of positive integer values is never exhausted.
     private int nextId;
 
-    private int newSuggestionCount = 0;
+    private int addedSuggestionCount = 0;
+    private int agedSuggestionCount = 0;
+    private int removedSuggestionCount = 0;
 
     public Predictions(User aSessionOwner, String aDataOwner, Project aProject)
     {
@@ -132,6 +139,8 @@ public class Predictions
     }
 
     /**
+     * Gets suggestions of the specified type for the given document.
+     * 
      * TODO #176 use the document Id once it it available in the CAS
      * 
      * @param type
@@ -154,37 +163,35 @@ public class Predictions
             Class<T> type, String aDocumentName, AnnotationLayer aLayer, int aWindowBegin,
             int aWindowEnd)
     {
-        return new SuggestionDocumentGroup<>(
+        return SuggestionDocumentGroup.groupsOfType(type,
                 getFlattenedPredictions(type, aDocumentName, aLayer, aWindowBegin, aWindowEnd));
     }
 
     /**
-     * TODO #176 use the document Id once it it available in the CAS
-     * 
      * Get the predictions of a document for a given window in a flattened list. If the parameters
      * {@code aWindowBegin} and {@code aWindowEnd} are {@code -1}, then they are ignored
      * respectively. This is useful when all suggestions should be fetched.
+     * 
+     * TODO #176 use the document Id once it it available in the CAS
      */
     @SuppressWarnings({ "rawtypes", "unchecked" })
     private <T extends AnnotationSuggestion> List<T> getFlattenedPredictions(Class<T> type,
             String aDocumentName, AnnotationLayer aLayer, int aWindowBegin, int aWindowEnd)
     {
+        var windowBegin = aWindowBegin == -1 ? 0 : aWindowBegin;
+        var windowEnd = aWindowEnd == -1 ? Integer.MAX_VALUE : aWindowEnd;
+
         synchronized (predictionsLock) {
             var byDocument = idxDocuments.getOrDefault(aDocumentName, emptyMap());
             return byDocument.entrySet().stream() //
                     .filter(f -> type.isInstance(f.getValue())) //
                     .map(f -> (Entry<ExtendedId, T>) (Entry) f) //
                     .filter(f -> f.getKey().getLayerId() == aLayer.getId()) //
-                    // .filter(f -> overlapping(f.getValue().getWindowBegin(),
-                    // f.getValue().getWindowEnd(),
-                    // aWindowBegin == -1 ? 0 : aWindowBegin,
-                    // aWindowEnd == -1 ? MAX_VALUE : aWindowEnd))
-                    .filter(f -> aWindowBegin == -1
-                            || (f.getValue().getWindowBegin() >= aWindowBegin))
-                    .filter(f -> aWindowEnd == -1 || (f.getValue().getWindowEnd() <= aWindowEnd))
+                    .filter(f -> AnnotationPredicates.overlapping(f.getValue().getWindowBegin(),
+                            f.getValue().getWindowEnd(), windowBegin, windowEnd))
                     .sorted(comparingInt(e2 -> e2.getValue().getWindowBegin())) //
                     .map(Map.Entry::getValue) //
-                    .collect(toList());
+                    .toList();
         }
     }
 
@@ -207,17 +214,19 @@ public class Predictions
         }
     }
 
-    /**
-     * @param aPredictions
-     *            list of sentences containing recommendations
-     */
-    public void putPredictions(List<AnnotationSuggestion> aPredictions)
+    public void putSuggestions(int aAdded, int aRemoved, int aAged,
+            List<AnnotationSuggestion> aSuggestions)
     {
         synchronized (predictionsLock) {
-            for (var prediction : aPredictions) {
+            addedSuggestionCount += aAdded;
+            agedSuggestionCount += aAged;
+            removedSuggestionCount += aRemoved;
+
+            var ageZeroSuggestions = 0;
+            for (var suggestion : aSuggestions) {
                 // Assign ID to predictions that do not have an ID yet
-                if (prediction.getId() == AnnotationSuggestion.NEW_ID) {
-                    prediction = prediction.assignId(nextId);
+                if (suggestion.getId() == AnnotationSuggestion.NEW_ID) {
+                    suggestion = suggestion.assignId(nextId);
                     nextId++;
                     if (nextId < 0) {
                         throw new IllegalStateException(
@@ -225,14 +234,36 @@ public class Predictions
                     }
                 }
 
+                var xid = new ExtendedId(suggestion);
+                var byDocument = idxDocuments.computeIfAbsent(suggestion.getDocumentName(),
+                        $ -> new HashMap<>());
+                byDocument.put(xid, suggestion);
+
+                if (suggestion.getAge() == 0) {
+                    ageZeroSuggestions++;
+                }
+            }
+
+            if (aAdded != ageZeroSuggestions) {
+                LOG.warn("Expected [{}] age-zero suggestions but found [{}]", aAdded,
+                        ageZeroSuggestions);
+            }
+        }
+    }
+
+    public void inheritSuggestions(List<AnnotationSuggestion> aPredictions)
+    {
+        synchronized (predictionsLock) {
+            for (var prediction : aPredictions) {
+                if (prediction.getId() == AnnotationSuggestion.NEW_ID) {
+                    throw new IllegalStateException(
+                            "Inherited suggestions must already have an ID");
+                }
+
                 var xid = new ExtendedId(prediction);
                 var byDocument = idxDocuments.computeIfAbsent(prediction.getDocumentName(),
                         $ -> new HashMap<>());
                 byDocument.put(xid, prediction);
-
-                if (prediction.getAge() == 0) {
-                    newSuggestionCount++;
-                }
             }
         }
     }
@@ -251,12 +282,12 @@ public class Predictions
 
     public boolean hasNewSuggestions()
     {
-        return newSuggestionCount > 0;
+        return addedSuggestionCount > 0;
     }
 
     public int getNewSuggestionCount()
     {
-        return newSuggestionCount;
+        return addedSuggestionCount;
     }
 
     public int size()
@@ -287,14 +318,13 @@ public class Predictions
                     .filter(f -> f.getValue().getEnd() == aSuggestion.getEnd()) //
                     .filter(f -> f.getValue().getFeature().equals(aSuggestion.getFeature())) //
                     .map(Map.Entry::getValue) //
-                    .collect(toList());
+                    .toList();
         }
     }
 
     /**
-     * TODO #176 use the document Id once it it available in the CAS Returns a list of predictions
-     * for a given token that matches the given layer and the annotation feature in the given
-     * document
+     * Returns a list of predictions for a given token that matches the given layer and the
+     * annotation feature in the given document
      *
      * @param aDocumentName
      *            the given document name
@@ -308,6 +338,7 @@ public class Predictions
      *            the given annotation feature name
      * @return the annotation suggestions
      */
+    // TODO #176 use the document Id once it it available in the CAS
     @SuppressWarnings({ "rawtypes", "unchecked" })
     public List<SpanSuggestion> getPredictionsByTokenAndFeature(String aDocumentName,
             AnnotationLayer aLayer, int aBegin, int aEnd, String aFeature)
@@ -322,7 +353,7 @@ public class Predictions
                     .filter(f -> f.getValue().getEnd() == aEnd) //
                     .filter(f -> f.getValue().getFeature().equals(aFeature)) //
                     .map(Map.Entry::getValue) //
-                    .collect(toList());
+                    .toList();
         }
     }
 
@@ -334,8 +365,13 @@ public class Predictions
             return byDocument.entrySet().stream() //
                     .filter(f -> f.getKey().getRecommenderId() == (long) aRecommender.getId())
                     .map(Map.Entry::getValue) //
-                    .collect(toList());
+                    .toList();
         }
+    }
+
+    public List<AnnotationSuggestion> getPredictionsByDocument(SourceDocument aDocument)
+    {
+        return getPredictionsByDocument(aDocument.getName());
     }
 
     public List<AnnotationSuggestion> getPredictionsByDocument(String aDocumentName)
@@ -344,7 +380,21 @@ public class Predictions
             var byDocument = idxDocuments.getOrDefault(aDocumentName, emptyMap());
             return byDocument.entrySet().stream() //
                     .map(Map.Entry::getValue) //
-                    .collect(toList());
+                    .toList();
+        }
+    }
+
+    public List<AnnotationSuggestion> getPredictionsByDocument(String aDocumentName,
+            int aWindowBegin, int aWindowEnd)
+    {
+        synchronized (predictionsLock) {
+            var byDocument = idxDocuments.getOrDefault(aDocumentName, emptyMap());
+            return byDocument.entrySet().stream() //
+                    .filter(f -> AnnotationPredicates.overlapping(f.getValue().getWindowBegin(),
+                            f.getValue().getWindowEnd(), aWindowBegin, aWindowEnd))
+                    .sorted(comparingInt(e2 -> e2.getValue().getWindowBegin())) //
+                    .map(Map.Entry::getValue) //
+                    .toList();
         }
     }
 
@@ -352,6 +402,13 @@ public class Predictions
     {
         synchronized (seenDocumentsForPrediction) {
             seenDocumentsForPrediction.add(aDocument.getName());
+        }
+    }
+
+    public int getDocumentsSeenCount()
+    {
+        synchronized (seenDocumentsForPrediction) {
+            return seenDocumentsForPrediction.size();
         }
     }
 
